<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColourPicker">

    <TextView
        android:id="@+id/cpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center_horizontal"
        android:text="@string/cpTitleTxt"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testColourText"
        android:layout_width="268dp"
        android:layout_height="128dp"
        android:background="#98CCCCCC"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center"
        android:text="@string/cpTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="447dp"
        android:layout_height="207dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/redBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:background="@color/red"
                android:text="@string/redTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/orangeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/orange"
                android:text="@string/orangeTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yellowBtn"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/yellowTxt"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/darkgreenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/darkgreen"
                android:text="@string/darkgreenTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/greenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/greenTxt"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/springgreenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/springGreen"
                android:text="@string/springGreenTxt"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/blueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/blue"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/blueTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/azureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/azure"
                android:text="@string/azureTxt"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cyanBtn"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/cyan"
                android:text="@string/cyanTxt"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/blackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/blackTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/greyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/greyTxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/whiteBtn"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/whiteTxt"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/beginTestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:text="@string/beginTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>