<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProximityTest3">

    <RadioGroup
        android:id="@+id/proxQ1"
        android:layout_width="440dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="224dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Texxt"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/simQ1A1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/oneTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/simQ1A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"

            android:text="@string/twoTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/simQ1A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/threeTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/simQ1A4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/fourTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/simQ1A5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/fiveTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/simQ1A6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/moreTxt"
            android:textColor="@color/orange"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/texxt12"
        android:layout_width="430dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/Sim1Q1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="416dp"
        android:layout_height="441dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.300"
        app:srcCompat="@drawable/proxtestimg3" />

    <Button
        android:id="@+id/ctBtn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FinishText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/proxTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center_horizontal"
        android:text="@string/ProxTitle3"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>