<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClosureTest1">

    <RadioGroup
        android:id="@+id/contQ3"
        android:layout_width="395dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="196dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Texxt2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/contQ3A1"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:text="@string/ClosQ1A1"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/contQ3A2"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/ClosQ1A2"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/contQ3A3"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/ClosQ1A3"
            android:textColor="@color/orange"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/texxt8"
        android:layout_width="257dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/ClosQ"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="464dp"
        android:layout_height="482dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.300"
        app:srcCompat="@drawable/clostest1img" />

    <TextView
        android:id="@+id/closTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center_horizontal"
        android:text="@string/ClosureTitle1"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ctBtn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />
</androidx.constraintlayout.widget.ConstraintLayout>